# git-rg

./: .gitignore  Cargo.toml  Justfile  LICENSE
.github/workflows/: codspeed.yml
benches/: search_at_rev.rs  with_repo.rs
src/: lib.rs  main.rs
