[package]
name = "git-rg"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
gix = { version = "0.72.1",features = ["hp-tempfile-registry"]}
grep = { version = "0.3.2", features = ["avx-accel", "simd-accel"] }
rayon = "1.10.0"
termcolor = "1.4.1"


[dev-dependencies]
divan = { version = "2.10.1", package = "codspeed-divan-compat" }

[[bench]]
name = "with_repo"
harness = false
